test/valid/58182_nested_function_calls/nested_function_calls.agu
-- Author: 58182, Gabriel Henriques

let addOne (x) : Int -> Int = x + 1

let addTwo (x) : Int -> Int = addOne(addOne(x))

let main(_) : Unit -> Unit =
    let result : Int = addTwo(5) ;
    print(result)
