test/invalid-syntax/58182_nested_function_creation/nested_function_creation.agu
-- Author: 58182, Gabriel Henriques
-- Parse error at token TokenLParen (AlexPn 91 4 23)
-- Não é possível definir uma função dentro de outra

let testNestedFunction : Unit =
    let outerFunction (x) : Int -> Int = (
        let innerFunction (y) : Int -> Int = x + y ;
        let result : Int = innerFunction(5) ;
        result
    ) ;
    let outerResult : Int = outerFunction(10) ;
    print(outerResult)